hide overflow x, fix nav hiding behind main

--- a/src/styles/common/_base.scss
+++ b/src/styles/common/_base.scss
@@ -14,6 +14,7 @@ main {
 }
 
 body {
+    overflow-x: hidden;
     background-color: $color-bg-dark;
     color: $color-white;
     font-family: sans-serif;
