--- a/src/styles/common/_nav.scss
+++ b/src/styles/common/_nav.scss
@@ -1,6 +1,7 @@
 .nav {
   background-color: $color-bg-light;
 
+  z-index: 10;
   font-size: 1.5rem;
   margin-bottom: 2rem;
 
